Archive2/80/0361b92dfc61be/output
clang: warning: -O4 is equivalent to -O3
main.cpp:12:9: error: class member cannot be redeclared
    int numerator() const {return myDenominator;}
        ^
main.cpp:10:9: note: previous declaration is here
    int numerator() const {return myNumerator;}
        ^
main.cpp:12:9: error: redefinition of 'numerator'
    int numerator() const {return myDenominator;}
        ^
main.cpp:10:9: note: previous definition is here
    int numerator() const {return myNumerator;}
        ^
main.cpp:26:28: warning: unused parameter 'denominator' [-Wunused-parameter]
int GCD(int numerator, int denominator) {return numerator;}
                           ^
main.cpp:67:17: error: read-only variable is not assignable
    myNumerator = a;
    ~~~~~~~~~~~ ^
main.cpp:72:17: error: read-only variable is not assignable
    myNumerator = b;
    ~~~~~~~~~~~ ^
main.cpp:85:55: error: too few arguments to function call, single argument 'b' was not specified
    int numerator = lhs.numerator() * rhs.denominator() + rhs.numerator() * lhs.denominator();
                                      ~~~~~~~~~~~~~~~ ^
main.cpp:70:1: note: 'denominator' declared here
int Rational:: denominator(int b) const
^
main.cpp:85:93: error: too few arguments to function call, single argument 'b' was not specified
    int numerator = lhs.numerator() * rhs.denominator() + rhs.numerator() * lhs.denominator();
                                                                            ~~~~~~~~~~~~~~~ ^
main.cpp:70:1: note: 'denominator' declared here
int Rational:: denominator(int b) const
^
main.cpp:86:39: error: too few arguments to function call, single argument 'b' was not specified
    int denominator = lhs.denominator() * rhs.denominator();
                      ~~~~~~~~~~~~~~~ ^
main.cpp:70:1: note: 'denominator' declared here
int Rational:: denominator(int b) const
^
main.cpp:86:59: error: too few arguments to function call, single argument 'b' was not specified
    int denominator = lhs.denominator() * rhs.denominator();
                                          ~~~~~~~~~~~~~~~ ^
main.cpp:70:1: note: 'denominator' declared here
int Rational:: denominator(int b) const
^
main.cpp:93:55: error: too few arguments to function call, single argument 'b' was not specified
    int numerator = lhs.numerator() * rhs.denominator() + rhs.numerator() * lhs.denominator();
                                      ~~~~~~~~~~~~~~~ ^
main.cpp:70:1: note: 'denominator' declared here
int Rational:: denominator(int b) const
^
main.cpp:93:93: error: too few arguments to function call, single argument 'b' was not specified
    int numerator = lhs.numerator() * rhs.denominator() + rhs.numerator() * lhs.denominator();
                                                                            ~~~~~~~~~~~~~~~ ^
main.cpp:70:1: note: 'denominator' declared here
int Rational:: denominator(int b) const
^
main.cpp:94:39: error: too few arguments to function call, single argument 'b' was not specified
    int denominator = lhs.denominator() * rhs.denominator();
                      ~~~~~~~~~~~~~~~ ^
main.cpp:70:1: note: 'denominator' declared here
int Rational:: denominator(int b) const
^
main.cpp:94:59: error: too few arguments to function call, single argument 'b' was not specified
    int denominator = lhs.denominator() * rhs.denominator();
                                          ~~~~~~~~~~~~~~~ ^
main.cpp:70:1: note: 'denominator' declared here
int Rational:: denominator(int b) const
^
main.cpp:101:39: error: too few arguments to function call, single argument 'b' was not specified
    int denominator = lhs.denominator() * rhs.denominator();
                      ~~~~~~~~~~~~~~~ ^
main.cpp:70:1: note: 'denominator' declared here
int Rational:: denominator(int b) const
^
main.cpp:101:59: error: too few arguments to function call, single argument 'b' was not specified
    int denominator = lhs.denominator() * rhs.denominator();
                                          ~~~~~~~~~~~~~~~ ^
main.cpp:70:1: note: 'denominator' declared here
int Rational:: denominator(int b) const
^
main.cpp:107:55: error: too few arguments to function call, single argument 'b' was not specified
    int numerator = lhs.numerator() * rhs.denominator();
                                      ~~~~~~~~~~~~~~~ ^
main.cpp:70:1: note: 'denominator' declared here
int Rational:: denominator(int b) const
^
main.cpp:108:39: error: too few arguments to function call, single argument 'b' was not specified
    int denominator = lhs.denominator() * rhs.numerator();
                      ~~~~~~~~~~~~~~~ ^
main.cpp:70:1: note: 'denominator' declared here
int Rational:: denominator(int b) const
^
main.cpp:116:49: error: too few arguments to function call, single argument 'b' was not specified
    os << r.numerator() << "/" << r.denominator();
                                  ~~~~~~~~~~~~~ ^
main.cpp:70:1: note: 'denominator' declared here
int Rational:: denominator(int b) const
^
main.cpp:134:10: fatal error: 'Rational.h' file not found
#include "Rational.h"
         ^
1 warning and 18 errors generated.
